--- a/src/resturent/resturent.html
+++ b/src/resturent/resturent.html
@@ -1,96 +1,203 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../../public/assets/css/app.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../../public/assets/css/app.css" />
 
     <title>Document</title>
-</head>
+  </head>
 
-<body dir="ltr" class="bg-gray-100 px-10">
+  <body dir="ltr" class="bg-gray-100 px-10">
     <p class="text-black text-4xl font-semibold py-10">Popular Resturent</p>
     <div class="grid sm:grid-cols-3 grid-cols-1 gap-10 py-4">
-        <a href="#" class="bg-white shadow-lg rounded-sm relative transition duration-500 ease-in-out transform hover:-translate-y-1 hover:scale-110">
-            <img src="../../public/img/order/popular5.png" alt="order" class="inline-block w-full object-cover rounded-t-sm "> 
-            <div class="px-2 py-2">
-                <p class=" text-xl text-black font-bold">The Osahan Resturent</p>
-                <p class="text-base text-black font-semibold">Mirpur , Dhaka</p>
-                <div class="flex justify-between  pt-2 text-sm">
-                    <button class="lg:px-2 md:px-2 px-2 py-1 border border-color6 text-color6 rounded-sm">Open Now</button>
-                </div>
-            </div>
-            <p class="absolute  bg-black text-white text-sm font-semibold text-center rounded-sm self-center px-2 py-1 top-1 left-1">Pizza</p>
-            <p class="absolute  bg-color3 text-white text-sm font-semibold text-center rounded-sm self-center px-2 py-1 top-1 right-1">-30%</p>
-        </a>
-         <a href="#" class="bg-white shadow-lg rounded-sm relative transition duration-500 ease-in-out transform hover:-translate-y-1 hover:scale-110">
-            <img src="../../public/img/order/popular5.png" alt="order" class="inline-block w-full object-cover rounded-t-sm "> 
-            <div class="px-2 py-2">
-                <p class=" text-xl text-black font-bold">The Osahan Resturent</p>
-                <p class="text-base text-black font-semibold">Mirpur , Dhaka</p>
-                <div class="flex justify-between  pt-2 text-sm">
-                    <button class="lg:px-2 md:px-2 px-2 py-1 border border-red-700 text-red-700 rounded-sm">Close Now</button>
-                </div>
-            </div>
-            <p class="absolute  bg-black text-white text-sm font-semibold text-center rounded-sm self-center px-2 py-1 top-1 left-1">Pizza</p>
-            <p class="absolute  bg-color3 text-white text-sm font-semibold text-center rounded-sm self-center px-2 py-1 top-1 right-1">-30%</p>
-        </a>
-        <a href="#" class="bg-white shadow-lg rounded-sm relative transition duration-500 ease-in-out transform hover:-translate-y-1 hover:scale-110">
-            <img src="../../public/img/order/popular5.png" alt="order" class="inline-block w-full object-cover rounded-t-sm "> 
-            <div class="px-2 py-2">
-                <p class=" text-xl text-black font-bold">The Osahan Resturent</p>
-                <p class="text-base text-black font-semibold">Mirpur , Dhaka</p>
-                <div class="flex justify-between  pt-2 text-sm">
-                    <button class="lg:px-2 md:px-2 px-2 py-1 border border-color6 text-color6 rounded-sm">Open Now</button>
-                </div>
-            </div>
-            <p class="absolute  bg-black text-white text-sm font-semibold text-center rounded-sm self-center px-2 py-1 top-1 left-1">Pizza</p>
-            <p class="absolute  bg-color3 text-white text-sm font-semibold text-center rounded-sm self-center px-2 py-1 top-1 right-1">-30%</p>
-        </a>
-        <a href="#" class="bg-white shadow-lg rounded-sm relative transition duration-500 ease-in-out transform hover:-translate-y-1 hover:scale-110">
-            <img src="../../public/img/order/popular5.png" alt="order" class="inline-block w-full object-cover rounded-t-sm "> 
-            <div class="px-2 py-2">
-                <p class=" text-xl text-black font-bold">The Osahan Resturent</p>
-                <p class="text-base text-black font-semibold">Mirpur , Dhaka</p>
-                <div class="flex justify-between  pt-2 text-sm">
-                    <button class="lg:px-2 md:px-2 px-2 py-1 border border-color6 text-color6 rounded-sm">Open Now</button>
-                </div>
-            </div>
-            <p class="absolute  bg-black text-white text-sm font-semibold text-center rounded-sm self-center px-2 py-1 top-1 left-1">Pizza</p>
-            <p class="absolute  bg-color3 text-white text-sm font-semibold text-center rounded-sm self-center px-2 py-1 top-1 right-1">-30%</p>
-        </a>
-        <a href="#" class="bg-white shadow-lg rounded-sm relative transition duration-500 ease-in-out transform hover:-translate-y-1 hover:scale-110">
-            <img src="../../public/img/order/popular5.png" alt="order" class="inline-block w-full object-cover rounded-t-sm "> 
-            <div class="px-2 py-2">
-                <p class=" text-xl text-black font-bold">The Osahan Resturent</p>
-                <p class="text-base text-black font-semibold">Mirpur , Dhaka</p>
-                <div class="flex justify-between  pt-2 text-sm">
-                    <button class="lg:px-2 md:px-2 px-2 py-1 border border-color6 text-color6 rounded-sm">Open Now</button>
-                </div>
-            </div>
-            <p class="absolute  bg-black text-white text-sm font-semibold text-center rounded-sm self-center px-2 py-1 top-1 left-1">Pizza</p>
-            <p class="absolute  bg-color3 text-white text-sm font-semibold text-center rounded-sm self-center px-2 py-1 top-1 right-1">-30%</p>
-        </a>
-        <a href="#" class="bg-white shadow-lg rounded-sm relative transition duration-500 ease-in-out transform hover:-translate-y-1 hover:scale-110">
-            <img src="../../public/img/order/popular5.png" alt="order" class="inline-block w-full object-cover rounded-t-sm "> 
-            <div class="px-2 py-2">
-                <p class=" text-xl text-black font-bold">The Osahan Resturent</p>
-                <p class="text-base text-black font-semibold">Mirpur , Dhaka</p>
-                <div class="flex justify-between  pt-2 text-sm">
-                    <button class="lg:px-2 md:px-2 px-2 py-1 border border-color6 text-color6 rounded-sm">Open Now</button>
-                </div>
-            </div>
-            <p class="absolute  bg-black text-white text-sm font-semibold text-center rounded-sm self-center px-2 py-1 top-1 left-1">Pizza</p>
-            <p class="absolute  bg-color3 text-white text-sm font-semibold text-center rounded-sm self-center px-2 py-1 top-1 right-1">-30%</p>
-        </a>
-        
+      <a
+        href="#"
+        class="bg-white shadow-lg rounded-sm relative transition duration-500 ease-in-out transform hover:-translate-y-1 hover:scale-110"
+      >
+        <img
+          src="../../public/img/order/popular5.png"
+          alt="order"
+          class="inline-block w-full object-cover rounded-t-sm"
+        />
+        <div class="px-2 py-2">
+          <p class="text-xl text-black font-bold">The Osahan Resturent</p>
+          <p class="text-base text-black font-semibold">Mirpur , Dhaka</p>
+          <div class="flex justify-between pt-2 text-sm">
+            <button
+              class="lg:px-2 md:px-2 px-2 py-1 border border-color6 text-color6 rounded-sm"
+            >
+              Open Now
+            </button>
+          </div>
+        </div>
+        <p
+          class="absolute bg-black text-white text-sm font-semibold text-center rounded-sm self-center px-2 py-1 top-1 left-1"
+        >
+          Pizza
+        </p>
+        <p
+          class="absolute bg-color3 text-white text-sm font-semibold text-center rounded-sm self-center px-2 py-1 top-1 right-1"
+        >
+          -30%
+        </p>
+      </a>
+      <a
+        href="#"
+        class="bg-white shadow-lg rounded-sm relative transition duration-500 ease-in-out transform hover:-translate-y-1 hover:scale-110"
+      >
+        <img
+          src="../../public/img/order/popular5.png"
+          alt="order"
+          class="inline-block w-full object-cover rounded-t-sm"
+        />
+        <div class="px-2 py-2">
+          <p class="text-xl text-black font-bold">The Osahan Resturent</p>
+          <p class="text-base text-black font-semibold">Mirpur , Dhaka</p>
+          <div class="flex justify-between pt-2 text-sm">
+            <button
+              class="lg:px-2 md:px-2 px-2 py-1 border border-red-700 text-red-700 rounded-sm"
+            >
+              Close Now
+            </button>
+          </div>
+        </div>
+        <p
+          class="absolute bg-black text-white text-sm font-semibold text-center rounded-sm self-center px-2 py-1 top-1 left-1"
+        >
+          Pizza
+        </p>
+        <p
+          class="absolute bg-color3 text-white text-sm font-semibold text-center rounded-sm self-center px-2 py-1 top-1 right-1"
+        >
+          -30%
+        </p>
+      </a>
+      <a
+        href="#"
+        class="bg-white shadow-lg rounded-sm relative transition duration-500 ease-in-out transform hover:-translate-y-1 hover:scale-110"
+      >
+        <img
+          src="../../public/img/order/popular5.png"
+          alt="order"
+          class="inline-block w-full object-cover rounded-t-sm"
+        />
+        <div class="px-2 py-2">
+          <p class="text-xl text-black font-bold">The Osahan Resturent</p>
+          <p class="text-base text-black font-semibold">Mirpur , Dhaka</p>
+          <div class="flex justify-between pt-2 text-sm">
+            <button
+              class="lg:px-2 md:px-2 px-2 py-1 border border-color6 text-color6 rounded-sm"
+            >
+              Open Now
+            </button>
+          </div>
+        </div>
+        <p
+          class="absolute bg-black text-white text-sm font-semibold text-center rounded-sm self-center px-2 py-1 top-1 left-1"
+        >
+          Pizza
+        </p>
+        <p
+          class="absolute bg-color3 text-white text-sm font-semibold text-center rounded-sm self-center px-2 py-1 top-1 right-1"
+        >
+          -30%
+        </p>
+      </a>
+      <a
+        href="#"
+        class="bg-white shadow-lg rounded-sm relative transition duration-500 ease-in-out transform hover:-translate-y-1 hover:scale-110"
+      >
+        <img
+          src="../../public/img/order/popular5.png"
+          alt="order"
+          class="inline-block w-full object-cover rounded-t-sm"
+        />
+        <div class="px-2 py-2">
+          <p class="text-xl text-black font-bold">The Osahan Resturent</p>
+          <p class="text-base text-black font-semibold">Mirpur , Dhaka</p>
+          <div class="flex justify-between pt-2 text-sm">
+            <button
+              class="lg:px-2 md:px-2 px-2 py-1 border border-color6 text-color6 rounded-sm"
+            >
+              Open Now
+            </button>
+          </div>
+        </div>
+        <p
+          class="absolute bg-black text-white text-sm font-semibold text-center rounded-sm self-center px-2 py-1 top-1 left-1"
+        >
+          Pizza
+        </p>
+        <p
+          class="absolute bg-color3 text-white text-sm font-semibold text-center rounded-sm self-center px-2 py-1 top-1 right-1"
+        >
+          -30%
+        </p>
+      </a>
+      <a
+        href="#"
+        class="bg-white shadow-lg rounded-sm relative transition duration-500 ease-in-out transform hover:-translate-y-1 hover:scale-110"
+      >
+        <img
+          src="../../public/img/order/popular5.png"
+          alt="order"
+          class="inline-block w-full object-cover rounded-t-sm"
+        />
+        <div class="px-2 py-2">
+          <p class="text-xl text-black font-bold">The Osahan Resturent</p>
+          <p class="text-base text-black font-semibold">Mirpur , Dhaka</p>
+          <div class="flex justify-between pt-2 text-sm">
+            <button
+              class="lg:px-2 md:px-2 px-2 py-1 border border-color6 text-color6 rounded-sm"
+            >
+              Open Now
+            </button>
+          </div>
+        </div>
+        <p
+          class="absolute bg-black text-white text-sm font-semibold text-center rounded-sm self-center px-2 py-1 top-1 left-1"
+        >
+          Pizza
+        </p>
+        <p
+          class="absolute bg-color3 text-white text-sm font-semibold text-center rounded-sm self-center px-2 py-1 top-1 right-1"
+        >
+          -30%
+        </p>
+      </a>
+      <a
+        href="#"
+        class="bg-white shadow-lg rounded-sm relative transition duration-500 ease-in-out transform hover:-translate-y-1 hover:scale-110"
+      >
+        <img
+          src="../../public/img/order/popular5.png"
+          alt="order"
+          class="inline-block w-full object-cover rounded-t-sm"
+        />
+        <div class="px-2 py-2">
+          <p class="text-xl text-black font-bold">The Osahan Resturent</p>
+          <p class="text-base text-black font-semibold">Mirpur , Dhaka</p>
+          <div class="flex justify-between pt-2 text-sm">
+            <button
+              class="lg:px-2 md:px-2 px-2 py-1 border border-color6 text-color6 rounded-sm"
+            >
+              Open Now
+            </button>
+          </div>
+        </div>
+        <p
+          class="absolute bg-black text-white text-sm font-semibold text-center rounded-sm self-center px-2 py-1 top-1 left-1"
+        >
+          Pizza
+        </p>
+        <p
+          class="absolute bg-color3 text-white text-sm font-semibold text-center rounded-sm self-center px-2 py-1 top-1 right-1"
+        >
+          -30%
+        </p>
+      </a>
     </div>
-
-
-
-
-</body>
-
+  </body>
 </html>
